try to build maven ci